# njord

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  captain-definition  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-devnet.yml  deploy-mainnet.yml
apps/dashboard/: .env.example  Dockerfile  docker-entrypoint.sh  env.d.ts  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
apps/dashboard/public/: env-config.js
apps/dashboard/src/: main.ts
apps/dashboard/src/composables/: useFormatters.ts
apps/dashboard/src/config/: constants.ts  networks.ts
apps/dashboard/src/graphql/: client.ts
apps/dashboard/src/layouts/: DashboardLayout.vue  DefaultLayout.vue
apps/dashboard/src/pages/: CampaignDetailPage.vue  (+13 more)
apps/website/: Dockerfile  astro.config.mjs  nginx.conf  package.json  tailwind.config.ts
apps/website/public/: llms.txt  robots.txt
assets/: banner.json
docs/: DEPLOYMENT.md
documentation/: mkdocs.yml
documentation/docs/: faq.md  for-affiliates.md  for-bridge-operators.md  for-companies.md  fraud-protection.md  how-it-works.md  index.md  roadmap.md  tokenomics.md
njord-docs/: mkdocs.yml
njord-docs/docs/: architecture.md  fraud_detection.md  getting_started.md  introduction.md  protocol_flow.md  roadmap.md  stakeholders.md  tokenomics.md
njord-docs/site/: 404.html  getting_started.html  introduction.html  protocol_flow.html  stakeholders.html
njord-docs/site/search/: search_index.js  search_index.json
programs/njord/: Cargo.toml
programs/njord/src/: errors.rs  lib.rs
programs/njord/src/instructions/: affiliate.rs  attribution.rs  bridge.rs  campaign.rs  challenge.rs  governance.rs  initialize.rs  mod.rs
programs/njord/src/state/: affiliate.rs  attribution.rs  bridge.rs  campaign.rs  challenge.rs  governance.rs  mod.rs
scripts/: init-protocol.ts
tests/: njord.ts
tools/fraud-detection/: main.py  pyproject.toml
tools/fraud-detection/src/njord_fraud_detection/: __init__.py  cli.py  detector.py  models.py  scorer.py
(+63 files in other folders)
