[workspace]
members = [
    "programs/njord"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/njord-protocol/njord"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin constant_time_eq to version compatible with Solana platform-tools Rust 1.84
[patch.crates-io]
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", tag = "0.3.1" }
