[package]
name = "njord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Njord - Decentralized Affiliate Marketing Protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "njord"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
